tests/conc/reject/inout.hi
fn bump(x: mut int) -> int:
    x = x + 1
    return x
fn main():
    n := 1
    t := spawn bump(&n)
    print(str(wait(t)))
